# raytracer

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/geometry/: CMakeLists.txt
src/geometry/include/geometry/: collision.hpp  random.hpp  ray.hpp  sphere.hpp  vec3.hpp
src/geometry/src/: collision.cpp  random.cpp  ray.cpp  vec3.cpp
src/raytracer-core/: CMakeLists.txt
src/raytracer-core/include/raytracer/: camera.hpp  color.hpp  image.hpp  image_io.hpp  render.hpp  sphere.hpp  viewport.hpp  world.hpp
src/raytracer-core/src/: color.cpp  image_io.cpp  render.cpp
